--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,14 @@
 
 @custom-variant dark (&:is(.dark *));
 
+.container {
+  margin-inline: auto;
+  max-width: 1600px;
+  padding-inline: clamp(1rem, 5vw, 4rem);
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -55,9 +63,9 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
+  --primary: oklch(64.73% 0.16023 258.327);
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
+  --secondary: oklch(76.448% 0.108 258.612);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
@@ -116,10 +124,12 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
