--- a/app/globals.css
+++ b/app/globals.css
@@ -146,3 +146,17 @@ footer h3::after{
   background-color: var(--primary);
   margin-top: .125rem;
 }
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: translateX(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.animate-fade-in {
+  animation: fade-in 0.3s ease-out;
+}
