--- a/app/globals.css
+++ b/app/globals.css
@@ -63,7 +63,7 @@
   --popover-foreground: oklch(0.145 0 0);
   --primary: oklch(67.019% 0.17535 251.308);
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(76.448% 0.108 258.612);
+  --secondary: oklch(79.849% 0.0974 258.672);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
@@ -146,6 +146,8 @@ footer h3::after{
   background-color: var(--primary);
   margin-top: .125rem;
 }
+
+/* EFEITO WHATSAPP */
 @keyframes fade-in {
   from {
     opacity: 0;
