--- a/app/globals.css
+++ b/app/globals.css
@@ -148,7 +148,7 @@ footer h3::after{
 }
 
 /* EFEITO WHATSAPP */
-@keyframes fade-in {
+@keyframes fade-slide {
   from {
     opacity: 0;
     transform: translateX(10px);
@@ -159,6 +159,31 @@ footer h3::after{
   }
 }
 
-.animate-fade-in {
-  animation: fade-in 0.3s ease-out;
+.tooltip-animate {
+  animation: fade-slide 0.3s ease-out;
 }
+
+
+@keyframes whatsapp-wave {
+  0% {
+    transform: scale(1);
+    opacity: 0.5;
+  }
+  70% {
+    transform: scale(1.8);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.whatsapp-wave {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 9999px;
+  background: rgba(34, 197, 94, 0.4);
+  animation: whatsapp-wave 2s infinite;
+}
+
